Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 1.2.1
-
None
-
None
Description
We preserve the filename when copying libraries from HDFS to the local FS, but don't use the HDFS path. This means if you have two separate libs with the same name but in different HDFS locations (e.g. "/user1/mylib.so", "/user2/mylib.so") they'll clobber each other. This is pretty easy to work around but we don't detect this case at all – when I tried it locally the impalad segfaulted.