be/src/util/hdfs-util.cc
@@ -16,7 +16,6 @@
 
 #include <sstream>
 #include <string.h>
-#include <boost/filesystem.hpp>
 
 #include "util/error-util.h"
 
@@ -44,23 +43,13 @@ bool IsHiddenFile(const string& filename) {
   return !filename.empty() && (filename[0] == '.' || filename[0] == '_');
 }
 
-Status CopyHdfsFile(const hdfsFS& src_conn, const char* src_path,
-                    const hdfsFS& dst_conn, const char* dst_dir,
-                    string* dst_path) {
-
-  // Append the source filename to the destination directory. Also add the process ID to
-  // the filename so multiple processes don't clobber each other's files.
-  filesystem::path src(src_path);
-  stringstream dst;
-  dst << dst_dir << "/" << src.stem().native() << "." << getpid()
-      << src.extension().native();
-  *dst_path = dst.str();
-
-  int error = hdfsCopy(src_conn, src_path, dst_conn, dst_path->c_str());
+Status CopyHdfsFile(const hdfsFS& src_conn, const string& src_path,
+                    const hdfsFS& dst_conn, const string& dst_path) {
+  int error = hdfsCopy(src_conn, src_path.c_str(), dst_conn, dst_path.c_str());
   if (error != 0) {
     string error_msg = GetHdfsErrorMsg("");
     stringstream ss;
-    ss << "Failed to copy " << src_path << " to " << dst_dir << ": " << error_msg;
+    ss << "Failed to copy " << src_path << " to " << dst_path << ": " << error_msg;
     return Status(ss.str());
   }
   return Status::OK;
